WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128301
Misused PLATFORM(MIDDLE_ENDIAN) and PLATFORM(BIG_ENDIAN)
https://bugs.webkit.org/show_bug.cgi?id=128301
Summary
Misused PLATFORM(MIDDLE_ENDIAN) and PLATFORM(BIG_ENDIAN)
Tamas Gergely
Reported
2014-02-06 02:50:09 PST
MIDDLE_ENDIAN and BIG_ENDIAN are CPU attributes and not platform. They should be used with CPU() macro, and not with PLATFORM().
Attachments
patch
(1.37 KB, patch)
2014-02-06 02:51 PST
,
Tamas Gergely
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tamas Gergely
Comment 1
2014-02-06 02:51:53 PST
Created
attachment 223320
[details]
patch
Daniel Bates
Comment 2
2014-06-17 14:59:41 PDT
Comment on
attachment 223320
[details]
patch r=me Is there any way we can prevent this? From briefly searching, GCC has option -Wundef to warn about undefined identifiers. Would enabling it lead to many false positives?
WebKit Commit Bot
Comment 3
2014-06-17 15:35:54 PDT
Comment on
attachment 223320
[details]
patch Clearing flags on attachment: 223320 Committed
r170081
: <
http://trac.webkit.org/changeset/170081
>
WebKit Commit Bot
Comment 4
2014-06-17 15:35:57 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5
2014-06-18 00:00:05 PDT
(In reply to
comment #2
)
> (From update of
attachment 223320
[details]
) > r=me > > Is there any way we can prevent this? From briefly searching, GCC has option -Wundef to warn about undefined identifiers. Would enabling it lead to many false positives?
-Wundef is used by EFL port, but it doesn't help similar issues, because PLATFORM macro has the following definition: #define PLATFORM(WTF_FEATURE) (defined WTF_PLATFORM_##WTF_FEATURE && WTF_PLATFORM_##WTF_FEATURE)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug