Misused PLATFORM(MIDDLE_ENDIAN) and PLATFORM(BIG_ENDIAN). https://bugs.webkit.org/show_bug.cgi?id=128301

Reviewed by Daniel Bates.

Endianness is a CPU attribute, not a PLATFORM. PLATFORM() macro is replaced to CPU().

* wtf/text/ASCIIFastPath.h:
(WTF::copyLCharsFromUCharSource):


Canonical link: https://commits.webkit.org/151952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170081 268f45cc-cd09-0410-ab3c-d52691b4dbfc